Fix SPM permission issue - production readiness audit 2026-07-20
